<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="tw.com.walkablecity.ranking.RankingViewModel" />

        <variable
            name="minuteText"
            type="String" />

        <import type="tw.com.walkablecity.data.RouteSorting" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/select_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/primaryLightColor"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:minWidth="36dp"
            android:minHeight="36dp"
            android:text="@string/filter_time_title"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/filter_coverage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/filter_coverage" />

        <TextView
            android:id="@+id/select_time_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@color/primaryLightColor"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:text="@{minuteText}"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/select_time_title"
            app:layout_constraintStart_toEndOf="@+id/select_time_title" />


        <TextView
            android:id="@+id/filter_scenery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@{viewModel.filter == RouteSorting.SCENERY ? @drawable/bg_filter_button_clicked : @drawable/bg_filter_button_unclicked}"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:minWidth="36dp"
            android:minHeight="36dp"
            android:onClick="@{() -> viewModel.filterSort(RouteSorting.SCENERY)}"
            android:text="@string/filter_scenery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/bg_filter_button_unclicked" />

        <TextView
            android:id="@+id/filter_tranquility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@{viewModel.filter == RouteSorting.TRANQUILITY ? @drawable/bg_filter_button_clicked : @drawable/bg_filter_button_unclicked}"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:minWidth="36dp"
            android:minHeight="36dp"
            android:onClick="@{() -> viewModel.filterSort(RouteSorting.TRANQUILITY)}"
            android:text="@string/filter_tranquility"
            app:layout_constraintEnd_toStartOf="@+id/filter_scenery"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/bg_filter_button_unclicked" />

        <TextView
            android:id="@+id/filter_coverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@{viewModel.filter == RouteSorting.COVERAGE ? @drawable/bg_filter_button_clicked : @drawable/bg_filter_button_unclicked}"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:minWidth="36dp"
            android:minHeight="36dp"
            android:onClick="@{() -> viewModel.filterSort(RouteSorting.COVERAGE)}"
            android:text="@string/filter_coverage"
            app:layout_constraintEnd_toStartOf="@+id/filter_tranquility"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/bg_filter_button_unclicked" />

        <TextView
            android:id="@+id/filter_vibe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@{viewModel.filter == RouteSorting.VIBE ? @drawable/bg_filter_button_clicked : @drawable/bg_filter_button_unclicked}"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:minWidth="36dp"
            android:minHeight="36dp"
            android:onClick="@{() -> viewModel.filterSort(RouteSorting.VIBE)}"
            android:text="@string/filter_vibe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_scenery"
            tools:background="@drawable/bg_filter_button_unclicked" />

        <TextView
            android:id="@+id/filter_snack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@{viewModel.filter == RouteSorting.SNACK ? @drawable/bg_filter_button_clicked : @drawable/bg_filter_button_unclicked}"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:minWidth="36dp"
            android:minHeight="36dp"
            android:onClick="@{() -> viewModel.filterSort(RouteSorting.SNACK)}"
            android:text="@string/filter_snack"
            app:layout_constraintEnd_toStartOf="@+id/filter_vibe"
            app:layout_constraintTop_toBottomOf="@+id/filter_tranquility"
            tools:background="@drawable/bg_filter_button_clicked" />

        <TextView
            android:id="@+id/filter_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@{viewModel.filter == RouteSorting.REST ? @drawable/bg_filter_button_clicked : @drawable/bg_filter_button_unclicked}"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:minWidth="36dp"
            android:minHeight="36dp"
            android:onClick="@{() -> viewModel.filterSort(RouteSorting.REST)}"
            android:text="@string/filter_rest"
            app:layout_constraintEnd_toStartOf="@+id/filter_snack"
            app:layout_constraintTop_toBottomOf="@+id/filter_coverage"
            tools:background="@drawable/bg_filter_button_unclicked" />

        <TextView
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:minWidth="24dp"
            android:minHeight="24dp"
            android:text="@string/minute"
            app:layout_constraintBottom_toBottomOf="@+id/filter_rest"
            app:layout_constraintEnd_toStartOf="@id/filter_rest"
            app:layout_constraintTop_toTopOf="@id/filter_rest" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/time_slider"
            style="?attr/sliderStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:stepSize="5"
            android:valueFrom="0"
            android:valueTo="40"
            app:labelBehavior="gone"
            app:layout_constraintBottom_toBottomOf="@+id/filter_rest"
            app:layout_constraintEnd_toStartOf="@id/minute"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/filter_rest"
            app:values="@array/initial_slider_values" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>