<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="tw.com.walkablecity.event.item.EventItemViewModel" />
        <import type="tw.com.walkablecity.data.LoadStatus"/>
        <import type="tw.com.walkablecity.data.EventType"/>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/filter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_event_filter"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:letterSpacing="0.15"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/event_filter"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/filter_title"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            >

            <TextView
                android:id="@+id/button_frequency_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/event_frequency"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:letterSpacing="0.15"
                android:onClick="@{() -> viewModel.filterSwitch(EventType.FREQUENCY)}"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/filter_frequency"
                android:textSize="12sp" />


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_distance_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/filter_title"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/button_distance_group_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/event_distance_group"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:letterSpacing="0.15"
                android:onClick="@{() -> viewModel.filterSwitch(EventType.DISTANCE_GROUP)}"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/filter_distance_group"
                android:textSize="12sp"
                />


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_distance_race"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/button_distance_group"
            app:layout_constraintStart_toEndOf="@+id/button_frequency"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/button_distance_race_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_event_filter"
                android:backgroundTint="@color/event_distance_race"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"

                android:letterSpacing="0.15"
                android:onClick="@{() -> viewModel.filterSwitch(EventType.DISTANCE_RACE)}"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/filter_distance_race"
                android:textSize="12sp"
                 />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_hour_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_distance_group"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/button_hour_group_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/event_hour_group"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:letterSpacing="0.15"
                android:onClick="@{() -> viewModel.filterSwitch(EventType.HOUR_GROUP)}"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/filter_hour_group"
                android:textSize="12sp"
                />


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_hour_race"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/button_hour_group"
            app:layout_constraintStart_toEndOf="@+id/button_distance_race"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">



            <TextView
                android:id="@+id/button_hour_race_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/event_hour_race"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:letterSpacing="0.15"
                android:onClick="@{() -> viewModel.filterSwitch(EventType.HOUR_RACE)}"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/filter_hour_race"
                android:textSize="12sp"
                />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/filter_empty"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_hour_race"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button_hour_race"
            app:layout_constraintTop_toTopOf="parent"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/filter_empty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:layout_gravity="center"
                android:letterSpacing="0.15"
                android:onClick="@{() -> viewModel.seeAllEvent()}"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/event_all"
                android:textSize="12sp"
                />

        </com.google.android.material.card.MaterialCardView>





        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_event_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_frequency"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            app:event="@{viewModel.eventList}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:letterSpacing="0.15"
            android:visibility="@{viewModel.status == LoadStatus.LOADING || viewModel.eventList == null ? View.GONE : (viewModel.eventList.size() == 0 ? View.VISIBLE : View.GONE)}"
            android:text="@{viewModel.eventAllList == null ? viewModel.eventPage.empty : @string/event_empty_after_filter}"
            android:textColor="@color/primaryColor"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/no_route_yet" />

        <ProgressBar
            android:id="@+id/progress_event"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:theme="@style/ProgressTheme"
            android:visibility="@{viewModel.status == LoadStatus.LOADING ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>